<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.playground</groupId>
    <artifactId>spring-boot-playground</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Spring Boot Playground</name>
    <description>Demo project for Spring Boot</description>
    <packaging>pom</packaging>

    <modules>
        <module>app-parent</module>
        <module>test-utils</module>
        <module>sba</module>
        <!-- common, helm, iac... others to come -->
    </modules>

    <properties>
        <java.version>22</java.version>
        <!--        <jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>-->
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>

        <!-- new -->
        <spring-boot.version>3.3.7</spring-boot.version>
        <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
        <!--        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>-->
        <!--        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>-->
        <!--        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>-->
    </properties>

    <!--    <dependencyManagement>-->
    <!--        <dependencies>-->
    <!--            <dependency>-->
    <!--                <groupId>org.testcontainers</groupId>-->
    <!--                <artifactId>testcontainers-bom</artifactId>-->
    <!--                <version>1.20.4</version>-->
    <!--                <type>pom</type>-->
    <!--                <scope>import</scope>-->
    <!--            </dependency>-->
    <!--        </dependencies>-->
    <!--    </dependencyManagement>-->

    <dependencyManagement>
        <dependencies>
            <!--            &lt;!&ndash; Import Spring Boot BOM &ndash;&gt;-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-dependencies</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <type>pom</type>-->
            <!--                <scope>import</scope>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version> <!-- Use the latest version -->
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version> <!-- Use the latest version TODO keep?-->
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>de.codecentric</groupId>-->
        <!--            <artifactId>spring-boot-admin-starter-client</artifactId>-->
        <!--            <version>3.3.3</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; Prometheus Registry for Micrometer &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>io.micrometer</groupId>-->
        <!--            <artifactId>micrometer-registry-prometheus</artifactId>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-starter-test</artifactId>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core -->
        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-core</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>

        <!--        &lt;!&ndash;	data, jpa, liquibase	&ndash;&gt;-->
        <!--        &lt;!&ndash; Spring Boot Starter JPA &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; PostgreSQL Driver &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.postgresql</groupId>-->
        <!--            <artifactId>postgresql</artifactId>-->
        <!--            <scope>runtime</scope>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; Liquibase &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.liquibase</groupId>-->
        <!--            <artifactId>liquibase-core</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.mapstruct</groupId>-->
        <!--            <artifactId>mapstruct</artifactId>-->
        <!--            <version>${org.mapstruct.version}</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; Testcontainers &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.testcontainers</groupId>-->
        <!--            <artifactId>testcontainers</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.testcontainers</groupId>-->
        <!--            <artifactId>junit-jupiter</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.testcontainers</groupId>-->
        <!--            <artifactId>postgresql</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-compress</artifactId>-->
        <!--            <version>1.26.0</version>-->
        <!--        </dependency>-->
        <!--        -->
        <!-- mute an annoying WARN caused by maven `plexus.core`: -->
        <!-- [WARNING] unknown enum constant javax.annotation.meta.When.MAYBE -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <!--                    <execution>-->
                    <!--                        <id>sources</id>-->
                    <!--                        <phase>initialize</phase>&lt;!&ndash; TODO DELETE later after industrialization, or add a profile to distinguish between dev build and pr ones&ndash;&gt;-->
                    <!--                        <goals>-->
                    <!--                            <goal>sources</goal>-->
                    <!--                        </goals>-->
                    <!--                        <configuration>-->
                    <!--                            <classifier>sources</classifier>-->
                    <!--                        </configuration>-->
                    <!--                    </execution>-->
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <!--                    <version>${maven-compiler-plugin.version}</version>-->
                    <configuration>
                        <!--                        <source>${java.version}</source> &lt;!&ndash; Use the property here &ndash;&gt;-->
                        <!--                        <target>${java.version}</target>-->
                        <release>${java.version}</release>  <!-- Changed from source/target to release -->
                        <parameters>true</parameters>
                        <!--                    <compilerArgs>-->
                        <!--                        &#45;&#45;enable-preview-->
                        <!--                    </compilerArgs>-->
                        <annotationProcessorPaths combine.children="append">
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${org.mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <!--                                <version>${lombok.version}</version>-->
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>0.2.0</version>
                            </path>
                            <path>
                                <groupId>org.hibernate.orm</groupId>
                                <artifactId>hibernate-jpamodelgen</artifactId>
                                <version>${hibernate.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <!--                    <version>${maven-surefire-plugin.version}</version>-->
                    <configuration>
                        <argLine>
                            -javaagent:"${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar"
                            -XX:+EnableDynamicAgentLoading -Xshare:off
                        </argLine>
                        <environmentVariables>
                            <TESTCONTAINERS_REUSE_ENABLE>true</TESTCONTAINERS_REUSE_ENABLE>
                        </environmentVariables>
                    </configuration>
                </plugin>
                <!--                <plugin>-->
                <!--                    <groupId>org.springframework.boot</groupId>-->
                <!--                    <artifactId>spring-boot-maven-plugin</artifactId>-->
                <!--&lt;!&ndash;                    <version>${spring.boot.version}</version>&ndash;&gt;-->
                <!--                </plugin>-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <!--                    <version>${maven-dependency-plugin.version}</version>-->
                    <executions>
                        <execution>
                            <id>properties</id>
                            <phase>initialize</phase>
                            <goals>
                                <goal>properties</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
